# veriel-ops

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/agents/: bun-expert.md  cloudflare-expert.md  code-reviewer.md  coverage.md  deploy.md  dns.md  hono-expert.md  project-setup.md  react-expert.md  rollback.md  test-expert.md
.claude/skills/: coverage.md  deploy.md  new-project.md  promote.md  rollback.md  status.md
dashboard/: .env.example  astro.config.mjs  index.html  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
dashboard/server/: index.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: main.rs
docs/: architecture-diagram.drawio  architecture-diagram.html  local-services.md  manual-pilot-setup.md  plan-fase-3.md  plan-public-release.md  plan-react-migration.md  plan-redesign.md  spec.md  sse-designs.html  sse-guide.md  veriel-ops-api.postman_collection.json
docs/desktop/: INSTALL.md
docs/guides/: architecture-diagram-guidelines.md  hono-best-practices.md
docs/phases/: container-deploy-options.md  phase-a.md  phase-b.md  phase-c.md  test-report-phase-a.csv  test-report-phase-a.html  test-report-phase-a.xlsx
server/: package.json  tsconfig.json  vitest.config.ts
server/scripts/: generate-token.ts
server/src/: constants.ts  env.ts  (+2 more)
(+155 files in other folders)
