[package]
name = "veriel-ops"
version = "0.1.0"
description = "Centralized DevOps platform for veriel.dev"
edition = "2021"

[lib]
name = "veriel_ops_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
